--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/style.scss
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/style.scss
@@ -23,7 +23,7 @@ ovh-manager-pci-project-a-i-dashboard {
   .squared-box {
     display: flex;
     flex-direction: column;
-    padding: 1rem 3rem 1rem 3rem;
+    padding: 1rem 3rem;
     align-items: center;
 
     &__value {
