--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/components/ai-pipeline/ai-pipeline.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/components/ai-pipeline/ai-pipeline.html
@@ -2,10 +2,12 @@
     <div class="col">
         <div class="d-flex flex-column align-items-center">
             <img data-ng-src="{{::$ctrl.images.stock}}" alt="stock" />
-            <strong>
-                <span>1.</span>
-                <span data-translate="pci_ai_dashboard_pipeline_stock"></span>
-            </strong>
+            <ol start="1" class="font-weight-bold mb-0 p-0">
+                <li
+                    data-translate="pci_ai_dashboard_pipeline_stock"
+                    class="font-weight-bold"
+                ></li>
+            </ol>
             <oui-button
                 data-variant="link"
                 data-icon-right="oui-icon-arrow-right"
@@ -23,10 +25,12 @@
     <div class="col">
         <div class="d-flex flex-column align-items-center">
             <img data-ng-src="{{::$ctrl.images.explore}}" alt="explore" />
-            <strong>
-                <span>2.</span>
-                <span data-translate="pci_ai_dashboard_pipeline_explore"></span>
-            </strong>
+            <ol start="2" class="font-weight-bold mb-0 p-0">
+                <li
+                    data-translate="pci_ai_dashboard_pipeline_explore"
+                    class="font-weight-bold"
+                ></li>
+            </ol>
             <oui-button
                 class="mb-2"
                 data-variant="link"
@@ -62,10 +66,12 @@
     <div class="col">
         <div class="d-flex flex-column align-items-center">
             <img data-ng-src="{{::$ctrl.images.train}}" alt="train" />
-            <strong>
-                <span>3.</span>
-                <span data-translate="pci_ai_dashboard_pipeline_train"></span>
-            </strong>
+            <ol start="3" class="font-weight-bold mb-0 p-0">
+                <li
+                    data-translate="pci_ai_dashboard_pipeline_train"
+                    class="font-weight-bold"
+                ></li>
+            </ol>
             <oui-button
                 class="mb-2"
                 data-variant="link"
@@ -101,10 +107,12 @@
     <div class="col">
         <div class="d-flex flex-column align-items-center">
             <img data-ng-src="{{::$ctrl.images.serve}}" alt="serve" />
-            <strong>
-                <span>4.</span>
-                <span data-translate="pci_ai_dashboard_pipeline_serve"></span>
-            </strong>
+            <ol start="4" class="font-weight-bold mb-0 p-0">
+                <li
+                    data-translate="pci_ai_dashboard_pipeline_serve"
+                    class="font-weight-bold"
+                ></li>
+            </ol>
             <oui-button
                 class="mb-2"
                 data-variant="link"
