feat: add advanced config tab for grafana and disable links
datatr-168

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/dashboard-integrations/dashboard-integrations.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/dashboard-integrations/dashboard-integrations.html
@@ -26,6 +26,7 @@
                 class="oui-tile__button oui-button oui-button_ghost oui-button_block"
                 type="button"
                 data-ng-click="$ctrl.onManageButtonClick()"
+                data-ng-disabled="$ctrl.disabled"
             >
                 <span
                     data-translate="pci_databases_dashboard_integrations_link"
