--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
@@ -266,6 +266,7 @@
 
     <p data-translate="pci_app_add_resources_total"></p>
     <ovh-manager-catalog-price
+        data-ng-class="{'text-decoration-line-through': $ctrl.IS_BETA}"
         data-price="$ctrl.price"
         data-tax="$ctrl.tax"
         data-user="$ctrl.user"
@@ -273,4 +274,9 @@
         data-interval="'hour'"
     >
     </ovh-manager-catalog-price>
+    <span
+        data-ng-if="$ctrl.IS_BETA"
+        class="oui-badge oui-badge_s oui-badge_success"
+        data-translate="pci_app_add_resources_free_during_beta"
+    ></span>
 </div>
