--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
@@ -16,6 +16,11 @@
             </oui-button>
         </oui-datagrid-column>
         <oui-datagrid-column
+            data-title=":: 'dedicatedCloud_datacenters_commercialRange' | translate"
+            property="commercialRange"
+        >
+        </oui-datagrid-column>
+        <oui-datagrid-column
             data-title=":: 'dedicatedCloud_datacenters_cpu' | translate"
         >
             <span
