--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
@@ -1,6 +1,6 @@
 <oui-tile
-    class="h-100"
-    data-heading="{{:: 'ovhManagerPccDashboardOptions_heading' | translate }}"
+    class="mb-3"
+    data-heading="{{:: 'ovhManagerPccDashboardOptions_heading_conformity' | translate }}"
 >
     <div data-ng-if="$ctrl.bindings.isLoading" class="text-center">
         <oui-spinner></oui-spinner>
@@ -19,10 +19,10 @@
                 <span
                     class="oui-badge"
                     data-ng-class="{
-                          'oui-badge_error': $ctrl.bindings.options.security.drpGlobalStatus.value.error,
-                          'oui-badge_warning': $ctrl.bindings.options.security.drpGlobalStatus.value.warning,
-                          'oui-badge_success': $ctrl.bindings.options.security.drpGlobalStatus.value.success
-                    }"
+          'oui-badge_error': $ctrl.bindings.options.security.drpGlobalStatus.value.error,
+          'oui-badge_warning': $ctrl.bindings.options.security.drpGlobalStatus.value.warning,
+          'oui-badge_success': $ctrl.bindings.options.security.drpGlobalStatus.value.success
+    }"
                 >
                     <span
                         data-translate="{{:: $ctrl.bindings.options.security.drpGlobalStatus.detail }}"
@@ -57,62 +57,6 @@
                 >
                     <span
                         data-translate="ovhManagerPccDashboardOptions_security_drp_action_delete"
-                    ></span>
-                </oui-action-menu-item>
-            </oui-action-menu>
-        </oui-tile-definition>
-
-        <oui-tile-definition
-            class="pb-2"
-            data-ng-if="$ctrl.bindings.options.basic.description.available"
-            data-term="{{:: 'ovhManagerPccDashboardOptions_basicOptions_term' | translate }}"
-        >
-            <oui-tile-description class="oui-list oui-list_separated m-0">
-                <ul class="oui-list__items">
-                    <li
-                        data-ng-repeat="option in ::$ctrl.bindings.options.basic.description.items track by option.name"
-                        data-ng-if="option.available"
-                        data-ng-class="{
-                            'pb-3': !$last,
-                        }"
-                        class="oui-list__item oui-list__group pt-3"
-                    >
-                        <ovh-manager-pcc-dashboard-options-descriptions-basic-option
-                            data-current-user=":: $ctrl.bindings.currentUser"
-                            data-option-name=":: option.name"
-                            data-presentation-url=":: option.presentationUrl"
-                            data-status=":: option.status"
-                        >
-                        </ovh-manager-pcc-dashboard-options-descriptions-basic-option>
-                    </li>
-                </ul>
-            </oui-tile-description>
-
-            <oui-action-menu
-                data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.exists"
-                data-compact
-                data-placement="end"
-            >
-                <oui-action-menu-item
-                    data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.activate.exists"
-                    data-on-click="$ctrl.onBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.activate.stateParams)"
-                    ><span
-                        data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_activate"
-                    ></span>
-                </oui-action-menu-item>
-                <oui-action-menu-item
-                    data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.switch.exists"
-                    data-on-click="$ctrl.onBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.switch.stateParams)"
-                    ><span
-                        data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_switch"
-                    ></span>
-                </oui-action-menu-item>
-                <oui-action-menu-item
-                    data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.payCheckout.exists"
-                    data-href="{{:: $ctrl.bindings.options.basic.actionMenu.items.payCheckout.url }}"
-                    data-external
-                    ><span
-                        data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_payCheckout"
                     ></span>
                 </oui-action-menu-item>
             </oui-action-menu>
@@ -168,14 +112,16 @@
                 <oui-action-menu-item
                     data-ng-if=":: $ctrl.bindings.options.certification.actionMenu.items.activate.exists"
                     data-on-click="$ctrl.onCertificationUpgrade($ctrl.bindings.options.certification.actionMenu.items.activate.stateParams)"
-                    ><span
+                >
+                    <span
                         data-translate="ovhManagerPccDashboardOptions_certification_actionMenu_activate"
                     ></span>
                 </oui-action-menu-item>
                 <oui-action-menu-item
                     data-ng-if=":: $ctrl.bindings.options.certification.actionMenu.items.configure.exists"
                     data-on-click="$ctrl.onConfigurationOnlyUpgrade($ctrl.bindings.options.certification.actionMenu.items.configure.stateParams)"
-                    ><span
+                >
+                    <span
                         data-translate="ovhManagerPccDashboardOptions_certification_actionMenu_configure"
                     ></span>
                 </oui-action-menu-item>
@@ -188,6 +134,75 @@
                     ></span>
                 </oui-action-menu-item>
             </oui-action-menu>
+        </oui-tile-definition>
+    </div>
+</oui-tile>
+
+<oui-tile
+    data-heading="{{:: 'ovhManagerPccDashboardOptions_heading_vmware_option' | translate }}"
+>
+    <div data-ng-if="$ctrl.bindings.isLoading" class="text-center">
+        <oui-spinner></oui-spinner>
+    </div>
+
+    <div data-ng-if="!$ctrl.bindings.isLoading">
+        <oui-tile-definition
+            class="pb-2"
+            data-ng-if="$ctrl.bindings.options.basic.description.available"
+        >
+            <oui-tile-description class="oui-list oui-list_separated m-0">
+                <ul class="oui-list__items">
+                    <li
+                        data-ng-repeat="option in ::$ctrl.bindings.options.basic.description.items track by option.name"
+                        data-ng-if="option.available"
+                        data-ng-class="{
+                            'pb-3': !$last,
+                        }"
+                        class="oui-list__item oui-list__group pt-3"
+                    >
+                        <ovh-manager-pcc-dashboard-options-descriptions-basic-option
+                            data-current-user=":: $ctrl.bindings.currentUser"
+                            data-option-name=":: option.name"
+                            data-presentation-url=":: option.presentationUrl"
+                            data-status=":: option.status"
+                        >
+                        </ovh-manager-pcc-dashboard-options-descriptions-basic-option>
+                    </li>
+                </ul>
+            </oui-tile-description>
+            <oui-tile-actions>
+                <oui-action-menu
+                    data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.exists"
+                    data-compact
+                    data-placement="end"
+                >
+                    <oui-action-menu-item
+                        data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.activate.exists"
+                        data-on-click="$ctrl.onBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.activate.stateParams)"
+                    >
+                        <span
+                            data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_activate"
+                        ></span>
+                    </oui-action-menu-item>
+                    <oui-action-menu-item
+                        data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.switch.exists"
+                        data-on-click="$ctrl.onBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.switch.stateParams)"
+                    >
+                        <span
+                            data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_switch"
+                        ></span>
+                    </oui-action-menu-item>
+                    <oui-action-menu-item
+                        data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.payCheckout.exists"
+                        data-href="{{:: $ctrl.bindings.options.basic.actionMenu.items.payCheckout.url }}"
+                        data-external
+                    >
+                        <span
+                            data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_payCheckout"
+                        ></span>
+                    </oui-action-menu-item>
+                </oui-action-menu>
+            </oui-tile-actions>
         </oui-tile-definition>
     </div>
 </oui-tile>
