fix(storage.cold-archive): fix user credentials banner display
ref: MANAGER-10808
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -99,7 +99,7 @@
             <oui-button
                 data-variant="secondary"
                 data-disabled="!$ctrl.canGenerateS3CredentialModeLinked()"
-                data-on-click="$ctrl.onLinkedUserClicked($ctrl.userModel.linkedMode.selected)"
+                data-on-click="$ctrl.onLinkedUserClicked()"
             >
                 <span
                     data-translate="pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_field_user_cta_linked"
