fix: change volume key to reflect api changes
datatr-163

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
@@ -32,7 +32,7 @@
                     <div class="oui-inline-adder__row">
                         <div
                             class="oui-inline-adder__field"
-                            ng-if="volume.privateSwift"
+                            ng-if="volume.dataStore"
                         >
                             <oui-field
                                 label="{{:: 'pci_app_add_attach_container_storage_container' | translate}}"
@@ -52,7 +52,7 @@
                         </div>
                         <div
                             class="oui-inline-adder__field"
-                            ng-if="volume.privateSwift"
+                            ng-if="volume.dataStore"
                         >
                             <oui-field
                                 data-label="{{:: 'pci_app_add_attach_container_data_prefix' | translate  }}"
