fix(pcc): rename nsx to nsxv and add eol message
ref: MANAGER-10172

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
@@ -163,6 +163,7 @@
                         <ovh-manager-pcc-dashboard-options-descriptions-basic-option
                             data-current-user=":: $ctrl.bindings.currentUser"
                             data-option-name=":: option.name"
+                            data-eol=":: option.eol"
                             data-status=":: option.status"
                         >
                         </ovh-manager-pcc-dashboard-options-descriptions-basic-option>
