--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/basic-option.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/basic-option.html
@@ -1,8 +1,15 @@
-<div
-    data-translate="{{:: 'ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_' + $ctrl.optionName }}"
-></div>
-
-<ovh-manager-pcc-dashboard-component-activation-status
-    class="d-block mt-1"
-    data-status-name=":: $ctrl.status.name"
-></ovh-manager-pcc-dashboard-component-activation-status>
+<dl class="oui-description">
+    <dt
+        data-translate="{{:: 'ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_' + $ctrl.optionName }}"
+    ></dt>
+    <dd>
+        <p
+            data-ng-if="$ctrl.eol"
+            data-translate="{{:: 'ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_' + $ctrl.optionName + '_eol' }}"
+        ></p>
+        <ovh-manager-pcc-dashboard-component-activation-status
+            class="d-block mt-1"
+            data-status-name=":: $ctrl.status.name"
+        ></ovh-manager-pcc-dashboard-component-activation-status>
+    </dd>
+</dl>
