fix(dedicated.ip): optimize the size of the ip dashboard
ref:MANAGER-10553

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/components/list/list.html
+++ b/packages/manager/apps/dedicated/client/app/ip/components/list/list.html
@@ -120,6 +120,15 @@
                     ></button>
                 </th>
                 <th scope="col" data-ng-if="advancedModeFilter">
+                    <span data-translate="ip_table_header_virtual_mac"></span>
+                    <button
+                        type="button"
+                        class="oui-popover-button"
+                        data-oui-popover="{{:: 'ip_table_header_virtual_mac_help' | translate }}"
+                        data-oui-popover-placement="top"
+                    ></button>
+                </th>
+                <th scope="col" data-ng-if="advancedModeFilter">
                     <span data-translate="ip_table_header_mitigation"></span>
                     <button
                         type="button"
