--- a/packages/manager/modules/billing-components/src/components/services-actions/services-actions.html
+++ b/packages/manager/modules/billing-components/src/components/services-actions/services-actions.html
@@ -115,7 +115,7 @@
         data-ng-if="(!$ctrl.service.shouldDeleteAtExpiration() || !$ctrl.service.isResiliated()) && !$ctrl.service.hasDebt() && !$ctrl.service.hasPendingResiliation()"
     >
         <oui-action-menu-item
-            ng-if="$ctrl.resiliateLink && $ctrl.service.canBeResiliated($ctrl.user.nichandle)"
+            ng-if="$ctrl.resiliateLink && $ctrl.service.hasAdminRights($ctrl.user.nichandle)"
             href="{{:: $ctrl.resiliateLink }}"
             on-click="$ctrl.trackAction('go-to-resiliate')"
             data-navi-id="go-to-resiliate"
