feat(dedicated.ip): add and modify text in organization edit modal
ref: MANAGER-10706

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/components/list/block/editAssociate/ip-ip-block-edit-associate.html
+++ b/packages/manager/apps/dedicated/client/app/ip/components/list/block/editAssociate/ip-ip-block-edit-associate.html
@@ -7,11 +7,12 @@
         data-on-dismiss="resetAction()"
         data-primary-disabled="disableSubmit"
     >
-        <oui-header-tabs class="mb-2">
+        <p data-translate="ip_edit_or_assosiate_description"></p>
+        <oui-header-tabs class="mb-2 mt-0">
             <oui-header-tabs-item
                 data-active="editTabActive"
                 data-on-click="getEditTabDetails()"
-                ><span data-translate="ip_edit_or_assosiate_editor_tab"></span>
+                ><span data-translate="ip_edit_or_assosiate_network_tab"></span>
             </oui-header-tabs-item>
             <oui-header-tabs-item
                 data-active="!editTabActive"
