feat(pci.ai): add label free during beta (#8802)
ref: DATATR-180

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
@@ -271,6 +271,7 @@
         data-user="$ctrl.user"
         data-show-zero-price="true"
         data-interval="'hour'"
+        data-beta="$ctrl.IS_BETA"
     >
     </ovh-manager-catalog-price>
 </div>
