feat(pci.data-processing): updating the order command
DATATR-184

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/packages/manager/modules/pci/src/components/pci-order-command/pci-order-command.html
+++ b/packages/manager/modules/pci/src/components/pci-order-command/pci-order-command.html
@@ -9,7 +9,7 @@
     <p data-ng-bind="$ctrl.orderApiUrl" class="api-url monospace"></p>
     <p data-translate="pci_order_command_parameters"></p>
     <pre data-ng-bind="$ctrl.getRequestData()" class="monospace"></pre>
-    <p>
+    <p data-ng-if="$ctrl.helpLink">
         <span data-translate="pci_order_command_parameters_info"></span>
         <a
             data-ng-if="$ctrl.helpLink"
