fix(hub.account): add a banner to invit the customer to update the siret
ref:MANAGER-10205

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/new-account-form-component.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/new-account-form-component.html
@@ -16,6 +16,16 @@
     data-ng-submit="$ctrl.submit()"
     novalidate
 >
+    <oui-message
+        type="success"
+        on-dismiss="$ctrl.onDismiss()"
+        dismissable
+        data-ng-if="$ctrl.isUpdated"
+    >
+        <span
+            data-translate="signup_field_add_companyNationalIdentificationNumber_siret_success"
+        ></span>
+    </oui-message>
     <!-- FORM SECTIONS -->
     <fieldset
         data-ng-form="{{:: 'form_part_' + section }}"
