--- a/packages/manager/modules/sign-up/src/components/siret/siret.html
+++ b/packages/manager/modules/sign-up/src/components/siret/siret.html
@@ -45,6 +45,7 @@
 <!-- result of search -->
 <form
     novalidate
+    id="siretForm"
     name="siretForm"
     class="mt-2 mb-2"
     data-ng-if="!$ctrl.searching && !$ctrl.isFirstSearch"
