--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
@@ -17,7 +17,6 @@
         <!--Linked btn-->
         <oui-button
             data-variant="link"
-            data-disabled="!$ctrl.usersCredentials.length"
             data-on-click="$ctrl.onLinkedModeClicked()"
         >
             <span
@@ -74,13 +73,13 @@
         </oui-field>
 
         <!--User credential overview inform-->
-        <pci-project-storages-user-credential-banner
+        <storages-components-user-credential-banner
             data-ng-if="$ctrl.userModel.linkedMode.credential"
+            data-is-new-user="false"
             data-user="$ctrl.userModel.linkedMode.selected"
             data-credential="$ctrl.userModel.linkedMode.credential"
-            data-field-secret-key-label="$ctrl.fieldSecretKeyLabel"
-            data-is-new-user="false"
-        ></pci-project-storages-user-credential-banner>
+            data-field-secret-key-label="{{:: 'pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key' | translate}}"
+        ></storages-components-user-credential-banner>
 
         <!--Linked user btns-->
         <div class="d-inline-block mb-1">
